--- a/topino/ui/darkstyle/darkstyle.qss
+++ b/topino/ui/darkstyle/darkstyle.qss
@@ -33,6 +33,7 @@ QMenu{
 }
 QMenu::item{
   padding:3px 25px 3px 25px;
+  min-width: 120px;
   border:1px solid transparent;
 }
 QMenu::item:disabled{
@@ -55,8 +56,8 @@ QMenu::separator{
   margin-right:5px;
 }
 QMenu::indicator{
-  width:18px;
-  height:18px;
+  width:22px;
+  height:22px;
 }
 QMenu::indicator:non-exclusive:checked{
   image:url(:/ui/darkstyle/icon_checkbox_checked.png);
