--- a/topino/ui/evalangulagramdialog.ui
+++ b/topino/ui/evalangulagramdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Evaluate angulagram</string>
+   <string>Peak fitting</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0" columnstretch="90,2,10,10">
    <item row="6" column="3">
